[package]
name = "ashpiano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
exitcode = "1.1.2"      # A collection of exitcodes.
console = "0.15.1"      # Handle keyboard events.
rodio = "0.15.0"        # Audio playback

[dependencies.async-std]
version = "1.6"
features = ["attributes", "tokio1"]
